Implement --dry-run option in migrate-mule tool