@@ -15,16 +15,12 @@
  *  specific language governing permissions and limitations
  *  under the License.
  */
-
 package mule;
 
-import common.BallerinaModel;
 import common.CodeGenerator;
-import io.ballerina.cli.cmd.NewCommand;
 import io.ballerina.compiler.syntax.tree.SyntaxTree;
 import mule.dataweave.converter.DWConversionStats;
 import mule.reader.MuleXMLNavigator;
-import picocli.CommandLine;
 
 import java.io.BufferedReader;
 import java.io.File;
@@ -41,19 +37,26 @@ import java.util.Collections;
 import java.util.List;
 import java.util.logging.Logger;
 
+import static common.BallerinaModel.Import;
+import static common.BallerinaModel.ModuleTypeDef;
+import static common.BallerinaModel.TextDocument;
+import static mule.MuleToBalConverter.convertXMLFileToBallerina;
 import static mule.report.HtmlReportWriter.writeHtmlReport;
-import static mule.MuleToBalConverter.convertProjectXMLFileToBallerina;
 import static mule.MuleToBalConverter.createTextDocument;
 import static mule.MuleToBalConverter.createContextTypeDefns;
 
 public class MuleMigrationExecutor {
     public static final String MULE_DEFAULT_APP_DIR_NAME = "app";
-    public static final String BAL_PROJECT_SUFFIX = "-ballerina";
-    public static final String MIGRATION_REPORT_NAME = "migration_summary.html";
+    public static final String BAL_PROJECT_SUFFIX = "_ballerina";
+    public static final String INTERNAL_TYPES_FILE_NAME = "internal_types";
+
+    public static final String MIGRATION_SUMMARY_REPORT_NAME = "migration_summary";
+    public static final String MIGRATION_ASSESSMENT_REPORT_NAME = "migration_assessment";
+
     private static final PrintStream OUT = System.out;
     private static final Logger logger = Logger.getLogger(MuleMigrationExecutor.class.getName());
 
-    public static void migrateMuleSource(String inputPathArg, String outputPathArg) {
+    public static void migrateMuleSource(String inputPathArg, String outputPathArg, boolean dryRun) {
         Path sourcePath = Paths.get(inputPathArg);
         if (!Files.exists(sourcePath)) {
             logger.severe("Source path does not exist: '" + sourcePath + "'");
@@ -62,10 +65,10 @@ public class MuleMigrationExecutor {
 
         if (Files.isDirectory(sourcePath)) {
             validateOutputPathArg(outputPathArg);
-            convertMuleProject(inputPathArg, outputPathArg);
+            convertMuleProject(inputPathArg, outputPathArg, dryRun);
         } else if (Files.isRegularFile(sourcePath) && inputPathArg.endsWith(".xml")) {
             validateOutputPathArg(outputPathArg);
-            convertMuleXmlFile(inputPathArg, outputPathArg);
+            convertMuleXmlFile(inputPathArg, outputPathArg, dryRun);
         } else {
             logger.severe("Invalid source path: '" + sourcePath + "'. Must be a directory or .xml file.");
             System.exit(1);
@@ -90,191 +93,180 @@ public class MuleMigrationExecutor {
         }
     }
 
-    public static void convertMuleXmlFile(String inputPathArg, String outputPathArg) {
-        Path inputPath = Paths.get(inputPathArg);
-        String inputFileName = inputPath.getFileName().toString().split(".xml")[0];
-        String balPackageName = inputFileName.concat(BAL_PROJECT_SUFFIX);
+    public static void convertMuleXmlFile(String inputPathArg, String outputPathArg, boolean dryRun) {
+        Path inputXmlFilePath = Path.of(inputPathArg);
+        String inputFileName = inputXmlFilePath.getFileName().toString().split(".xml")[0];
+        Path sourceDir = inputXmlFilePath.getParent() != null ? inputXmlFilePath.getParent() : Path.of(".");
 
-        Path balPackageDir;
+        String balPackageName = inputFileName + BAL_PROJECT_SUFFIX;
+        Path targetDir;
         if (outputPathArg != null) {
-            balPackageDir = Path.of(outputPathArg).resolve(balPackageName);
+            targetDir = Path.of(outputPathArg);
         } else {
-            Path parent = inputPath.getParent();
-            if (parent == null) {
-                // e.g. bar.xml
-                balPackageDir = Path.of(balPackageName);
-            } else {
-                // e.g foo/bar.xml
-                balPackageDir = parent.resolve(balPackageName);
-            }
+            targetDir = sourceDir;
         }
-        convertMuleXmlFile(balPackageDir, inputFileName, inputPathArg);
+
+        File xmlConfigFile = inputXmlFilePath.toFile();
+        convertToBalProject(Collections.singletonList(xmlConfigFile), Collections.emptyList(), sourceDir, targetDir,
+                balPackageName, dryRun);
     }
 
-    private static void convertMuleXmlFile(Path balPackageDir, String inputFileName, String inputXmlFilePath) {
-        Context ctx = new Context();
-        ctx.startNewFile(inputXmlFilePath);
-        MuleXMLNavigator xmlNavigator = new MuleXMLNavigator(ctx.migrationMetrics);
+    public static void convertMuleProject(String inputPathArg, String outputPathArg, boolean dryRun) {
+        // Collect xml configs and property files
+        List<File> xmlFiles = new ArrayList<>();
+        List<File> propertyFiles = new ArrayList<>();
+        Path sourcePath = Path.of(inputPathArg);
+        Path muleAppDir = sourcePath.resolve("src").resolve("main").resolve(MULE_DEFAULT_APP_DIR_NAME);
+        collectXmlAndPropertyFiles(muleAppDir.toFile(), xmlFiles, propertyFiles);
 
-        String targetBalFile = inputFileName.concat(".bal");
-        SyntaxTree syntaxTree;
-        try {
-            syntaxTree = convertProjectXMLFileToBallerina(xmlNavigator, ctx, inputXmlFilePath);
-        } catch (Exception e) {
-            logger.severe("Error converting the file: %s%n%s".formatted(inputFileName.concat(".xml"), e.getMessage()));
+        if (xmlFiles.isEmpty()) {
+            logger.severe("No XML files found in the directory: " + muleAppDir);
+            System.exit(1);
+        }
+
+        String balPackageName = sourcePath.getFileName() + BAL_PROJECT_SUFFIX;
+        Path targetDir = outputPathArg != null ? Paths.get(outputPathArg) : sourcePath;
+        convertToBalProject(xmlFiles, propertyFiles, muleAppDir, targetDir, balPackageName, dryRun);
+    }
+
+    private static void convertToBalProject(List<File> xmlFiles, List<File> propertyFiles, Path muleAppDir,
+                                            Path targetDir, String balPackageName, boolean dryRun) {
+        // 1. Convert xml configs to bal
+        Path balPackageDir = targetDir.resolve(balPackageName);
+        Context ctx = new Context();
+        MuleXMLNavigator muleXMLNavigator = new MuleXMLNavigator(ctx.migrationMetrics);
+        List<BalFile> balFiles = new ArrayList<>(xmlFiles.size() + 1);
+        for (File xmlFile : xmlFiles) {
+            ctx.startNewFile(xmlFile.getPath());
+            Path relativePath = muleAppDir.relativize(xmlFile.toPath());
+            String balFileName = relativePath.toString().replace(File.separator, ".").replace(".xml", "");
+            BalFile balFile = genBalFileFromXMLFile(ctx, muleXMLNavigator, xmlFile, balFileName, balPackageDir);
+            balFiles.add(balFile);
+        }
+
+        BalFile internalTypesBalFile = genBalFileForInternalTypes(ctx, balPackageDir);
+        balFiles.add(internalTypesBalFile);
+
+        // 2. Generate and write migration report
+        createDirectories(balPackageDir);
+        String reportName = dryRun ? MIGRATION_ASSESSMENT_REPORT_NAME : MIGRATION_SUMMARY_REPORT_NAME;
+        int percentage = writeHtmlReport(ctx.migrationMetrics, logger, balPackageDir, reportName, dryRun);
+
+        if (dryRun) {
+            printDryRunCompletion(balPackageDir, reportName);
             return;
         }
 
-        // TODO: merge repeated logic with convertMuleProject()
-        createBallerinaPackage(balPackageDir);
+        // 3. Write project
+        writeProjectArtifacts(balPackageName, balPackageDir);
+        writeBalFiles(balFiles);
+        genAndWriteConfigTOMLFile(propertyFiles, balPackageDir);
 
-        Path targetBalFilePath = balPackageDir.resolve(targetBalFile);
-        try {
-            Files.writeString(targetBalFilePath, syntaxTree.toSourceCode());
-        } catch (Exception e) {
-            logger.severe("Error writing to file: " + e.getMessage());
-            System.exit(1);
-        }
-
-        genAndWriteInternalTypesBalFile(ctx, balPackageDir.toString());
-        Path reportFilePath = Paths.get(balPackageDir.toString(), MIGRATION_REPORT_NAME);
-        int conversionPercentage = writeHtmlReport(logger, reportFilePath, ctx.migrationMetrics);
+        // 4. Print conversion percentages
         printDataWeaveConversionPercentage(ctx.migrationMetrics);
-        printOverallProjectConversionPercentage(conversionPercentage);
+        printOverallProjectConversionPercentage(percentage);
     }
 
-    public static void convertMuleProject(String inputPathArg, String outputPathArg) {
-        Path inputPath = Paths.get(inputPathArg);
-        String balPackageName = inputPath.getFileName().toString().concat(BAL_PROJECT_SUFFIX);
+    private static void writeProjectArtifacts(String balPackageName, Path balPackageDir)  {
+        String org = "migrate_mule";
+        String version = "0.1.0";
+        String distribution = "2201.12.3";
 
-        Path balPackageDir;
-        if (outputPathArg != null) {
-            balPackageDir = Path.of(outputPathArg).resolve(balPackageName);
-        } else {
-            balPackageDir = inputPath.resolve(balPackageName);
-        }
-        convertMuleProject(balPackageDir, inputPathArg);
-    }
+        Path tomlPath = balPackageDir.resolve("Ballerina.toml");
+        String tomlContent = """
+                [package]
+                org = "%s"
+                name = "%s"
+                version = "%s"
+                distribution = "%s"
+                
+                [build-options]
+                observabilityIncluded = true""".formatted(org, balPackageName, version, distribution);
 
-    public static void convertMuleProject(Path balPackageDir, String inputPathArg) {
-        createBallerinaPackage(balPackageDir);
-
-        Path sourceFolderPath = Path.of(inputPathArg).resolve("src").resolve("main").resolve(MULE_DEFAULT_APP_DIR_NAME);
-        String targetFolderPath = balPackageDir.toString();
-
-        List<File> xmlFiles = new ArrayList<>();
-        List<File> propertyFiles = new ArrayList<>();
-        collectXmlAndPropertyFiles(sourceFolderPath.toFile(), xmlFiles, propertyFiles);
-
-        if (xmlFiles.isEmpty()) {
-            logger.severe("No XML files found in the directory: " + sourceFolderPath);
-            System.exit(1);
-        }
-
-
-
-        Context ctx = new Context(); // Project Context
-        MuleXMLNavigator muleXMLNavigator = new MuleXMLNavigator(ctx.migrationMetrics);
-        for (File xmlFile : xmlFiles) {
-            ctx.startNewFile(xmlFile.getPath());
-            Path relativePath = sourceFolderPath.relativize(xmlFile.toPath());
-            String balFileName = relativePath.toString().replace(File.separator, ".").replace(".xml", ".bal");
-            Path targetFilePath = Paths.get(targetFolderPath, balFileName);
-            createDirectories(targetFilePath.getParent());
-
-            genAndWriteBalFileFromXMLFile(xmlFile, muleXMLNavigator, ctx, targetFilePath);
-        }
-
-        genAndWriteInternalTypesBalFile(ctx, targetFolderPath);
-        genConfigTOMLFile(propertyFiles, targetFolderPath);
-
-        Path reportFilePath = Paths.get(targetFolderPath, MIGRATION_REPORT_NAME);
-        int conversionPercentage = writeHtmlReport(logger, reportFilePath, ctx.migrationMetrics);
-        printDataWeaveConversionPercentage(ctx.migrationMetrics);
-        printOverallProjectConversionPercentage(conversionPercentage);
-    }
-
-    private static void createBallerinaPackage(Path balPackageDir) {
-        String[] args = {balPackageDir.toString()};
-        NewCommand newCommand = new NewCommand(System.out, false);
-        new CommandLine(newCommand).parseArgs(args);
-        newCommand.execute();
-
-        // Replace main.bal content with custom template
-        Path mainBalPath = balPackageDir.resolve("main.bal");
         try {
-            if (Files.exists(mainBalPath)) {
-                String templateContent = """
-                        // Generated by Mule to Ballerina converter
-                        
-                        public function main() {
-                            // Call the entrypoint here
-                        }
-                        """;
-                Files.writeString(mainBalPath, templateContent);
-            }
+            Files.writeString(tomlPath, tomlContent);
+            logger.info("Created Ballerina.toml file at: " + tomlPath);
         } catch (IOException e) {
-            logger.severe("Error modifying main.bal: " + e.getMessage());
+            logger.severe("Error writing Ballerina.toml file: " + e.getMessage());
+        }
+    }
+
+    public static class BalFile {
+        final String fileName;
+        final Path fileDirectory;
+        final SyntaxTree syntaxTree;
+
+        public BalFile(String fileName, Path fileDirectory, SyntaxTree syntaxTree) {
+            this.fileName = fileName;
+            this.fileDirectory = fileDirectory;
+            this.syntaxTree = syntaxTree;
+        }
+
+        public boolean isValid() {
+            // null means error in conversion
+            return syntaxTree != null;
+        }
+    }
+
+    private static void writeBalFiles(List<BalFile> balFiles) {
+        for (BalFile balFile : balFiles) {
+            if (balFile.isValid()) {
+                Path filePath = balFile.fileDirectory.resolve(balFile.fileName + ".bal");
+                try {
+                    Files.writeString(filePath, balFile.syntaxTree.toSourceCode());
+                } catch (IOException e) {
+                    logger.severe("Error writing to file: " + e.getMessage());
+                }
+            }
         }
     }
 
     /**
      * Generate and write the Ballerina file from the XML file.
      *
-     * @param xmlFile          xml file to be converted
-     * @param muleXMLNavigator MuleXMLNavigator instance to navigate the XML file
      * @param ctx              Context instance
-     * @param targetFilePath   path to the target file where the Ballerina code
-     *                         will be written
+     * @param muleXMLNavigator MuleXMLNavigator instance to navigate the XML file
+     * @param xmlFile          xml file to be converted
+     * @param balFileName      name of the target Ballerina file (without .bal extension)
+     * @param balFileDir       path to the target directory where the .bal file will be created
+     * @return BalFile instance containing the .bal file information
      */
-    private static void genAndWriteBalFileFromXMLFile(File xmlFile, MuleXMLNavigator muleXMLNavigator, Context ctx,
-                                                      Path targetFilePath) {
-        SyntaxTree syntaxTree;
+    private static BalFile genBalFileFromXMLFile(Context ctx, MuleXMLNavigator muleXMLNavigator, File xmlFile,
+                                                 String balFileName, Path balFileDir) {
+        SyntaxTree syntaxTree = null;
         try {
-            syntaxTree = convertProjectXMLFileToBallerina(muleXMLNavigator, ctx, xmlFile.getPath());
+            syntaxTree = convertXMLFileToBallerina(ctx, muleXMLNavigator, xmlFile.getPath());
         } catch (Exception e) {
             logger.severe(String.format("Error converting the file: %s%n%s", xmlFile.getName(), e.getMessage()));
-            return;
         }
 
-        try {
-            Files.writeString(targetFilePath, syntaxTree.toSourceCode());
-        } catch (IOException e) {
-            logger.severe("Error writing to file: " + e.getMessage());
-        }
+        return new BalFile(balFileName, balFileDir, syntaxTree);
     }
 
     /**
-     * Generate and write the internal-types.bal file.
+     * Generates a BalFile for internal types.
      *
-     * @param ctx              Context instance
-     * @param targetFolderPath path to the target folder where the
-     *                         internal-types.bal file will be created
+     * @param ctx       Context instance
+     * @param targetDir path to the target directory where the internal-types.bal file will be created
      */
-    private static void genAndWriteInternalTypesBalFile(Context ctx, String targetFolderPath) {
+    private static BalFile genBalFileForInternalTypes(Context ctx, Path targetDir) {
         // TODO: consider multi-flow-multi-context scenario
-        List<BallerinaModel.ModuleTypeDef> contextTypeDefns = createContextTypeDefns(ctx);
-        List<BallerinaModel.Import> contextImports = new ArrayList<>(1);
+        List<ModuleTypeDef> contextTypeDefns = createContextTypeDefns(ctx);
+        List<Import> contextImports = new ArrayList<>(1);
         if (!ctx.projectCtx.inboundProperties.isEmpty()) {
             // TODO: at the moment only http provides inbound properties
             contextImports.add(Constants.HTTP_MODULE_IMPORT);
         }
 
-        Path targetFilePath = Paths.get(targetFolderPath, "internal-types.bal");
-        BallerinaModel.TextDocument textDocument =
-                createTextDocument("internal-types", contextImports, contextTypeDefns, Collections.emptyList(),
-                        Collections.emptyList(),
-                        Collections.emptyList(), Collections.emptyList(), Collections.emptyList());
+        TextDocument textDocument = createTextDocument(INTERNAL_TYPES_FILE_NAME, contextImports, contextTypeDefns,
+                Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(),
+                Collections.emptyList());
         SyntaxTree syntaxTree = new CodeGenerator(textDocument).generateSyntaxTree();
-        try {
-            Files.writeString(targetFilePath, syntaxTree.toSourceCode());
-        } catch (IOException e) {
-            logger.severe("Error writing to file: " + e.getMessage());
-        }
+        return new BalFile(INTERNAL_TYPES_FILE_NAME, targetDir, syntaxTree);
     }
 
-    private static void genConfigTOMLFile(List<File> propertyFiles, String targetFolderPath) {
-        Path configPath = Paths.get(targetFolderPath, "Config.toml");
+    private static void genAndWriteConfigTOMLFile(List<File> propertyFiles, Path targetFolderPath) {
+        Path configPath = targetFolderPath.resolve("Config.toml");
         StringBuilder tomlContent = new StringBuilder();
 
         try {
@@ -315,11 +307,25 @@ public class MuleMigrationExecutor {
         }
     }
 
+    private static void printDryRunCompletion(Path balPackageDir, String reportName) {
+        OUT.println("________________________________________________________________");
+        OUT.println("Dry run completed. Migration assessment report written to " +
+                balPackageDir.resolve(reportName + ".html"));
+        OUT.println("________________________________________________________________");
+    }
+
     private static void printDataWeaveConversionPercentage(Context.MigrationMetrics migrationMetrics) {
         DWConversionStats stats = migrationMetrics.dwConversionStats;
-        OUT.println("________________________________________________________________");
-        OUT.println("Dataweave conversion percentage: " + String.format("%.2f", stats.getConversionPercentage()) + "%");
-        OUT.println("________________________________________________________________");
+        if (stats.dataWeaveFound()) {
+            OUT.println("________________________________________________________________");
+            OUT.println("Dataweave conversion percentage: " +
+                    String.format("%.2f", stats.getConversionPercentage()) + "%");
+            OUT.println("________________________________________________________________");
+        } else {
+            OUT.println("________________________________________________________________");
+            OUT.println("No Dataweave expressions found in the project.");
+            OUT.println("________________________________________________________________");
+        }
     }
 
     private static void printOverallProjectConversionPercentage(int conversionPercentage) {
